fix showing posts

--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 news:
-  name: News
+  name: Новости
 
 development:
-  name: Development
+  name: Разработка
