--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 node_modules
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
