--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
+  "name": "app",
+  "private": "true",
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@rails/ujs": "^7.0.4",
-    "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.2.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^3"
-  },
-  "engines": {
-    "node": "16.x"
+    "bootstrap-icons": "^1.9.1",
+    "esbuild": "^0.15.9",
+    "sass": "^1.55.0"
   },
   "scripts": {
-    "build": "bin/rails webpacker:compile"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
+    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
