--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: '16'
           cache: 'yarn'
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
 
-      - run: make setup
-      - run: make check
+      - run: make ci
 
   deploy:
     needs: build
